2016-02-24
PC always does random movement.

2016-02-23
Monsters that try a direct path to the PC work.

2016-02-23
End conditions and printing only happens after PC's turn.

2016-02-23
Queue is fixed so monsters (and PC) have their appropriate turns.

2016-02-23
Queue is partially implemented.  For some reason the PC seems to be the only one to move...

2016-02-23
Coding marathon!  A bunch of features.  The monsters print.  The PC can move randomly.  Monsters can kill each other
(theoretically).

2016-02-23
Set up the workspace for project 1.04